[package]
name = "openmls-crypto"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
rand = "0.8"

crypto_algorithms = { version = "0.1", git = "https://github.com/franziskuskiefer/algorithm-identifiers-rs.git", branch = "main"}
key_store = { version = "0.1", git = "https://github.com/franziskuskiefer/key-store-rs.git", branch = "reorg" }
tls_codec = { version = "0.1", git = "https://github.com/openmls/tls-codec.git", branch = "main", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[patch.'https://github.com/openmls/tls-codec.git']
tls_codec = { path = "../tls-codec/tls_codec" }

[features]
serialization = ["serde", "serde_json", "tls_codec/serde_serialize"]
hazmat = [] # ☣️ enable unsafe features
